<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">google-sans</string>
    <string name="abc_font_family_body_2_material">google-sans-medium</string>
    <string name="abc_font_family_button_material">google-sans-medium</string>
    <string name="abc_font_family_caption_material">google-sans</string>
    <string name="abc_font_family_display_1_material">google-sans</string>
    <string name="abc_font_family_display_2_material">google-sans</string>
    <string name="abc_font_family_display_3_material">google-sans</string>
    <string name="abc_font_family_display_4_material">google-sans</string>
    <string name="abc_font_family_headline_material">google-sans</string>
    <string name="abc_font_family_menu_material">google-sans</string>
    <string name="abc_font_family_subhead_material">google-sans</string>
    <string name="abc_font_family_title_material">google-sans-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">Screenshot</string>
    <string name="asusres_actionbar_searchview_query_hint">Search</string>
    <string name="asusres_commonres_version">v6.0.54.190711</string>
    <string name="asusres_font_family_ab_title">@string/asusres_font_family_medium</string>
    <string name="asusres_font_family_am_title">@string/asusres_font_family_medium</string>
    <string name="asusres_font_family_bottom_navigation">@string/asusres_font_family_main</string>
    <string name="asusres_font_family_button">@string/asusres_font_family_medium</string>
    <string name="asusres_font_family_dialog_title">@string/asusres_font_family_medium</string>
    <string name="asusres_font_family_light">google-sans</string>
    <string name="asusres_font_family_list">@string/asusres_font_family_main</string>
    <string name="asusres_font_family_list_header">@string/asusres_font_family_medium</string>
    <string name="asusres_font_family_main">google-sans</string>
    <string name="asusres_font_family_medium">google-sans-medium</string>
    <string name="asusres_font_family_permission_request_dialog_title">@string/asusres_font_family_main</string>
    <string name="asusres_font_family_subtitle">@string/asusres_font_family_light</string>
    <string name="asusres_font_family_widget">@string/asusres_font_family_main</string>
    <string name="asusres_searchview_query_hint">Search</string>
    <string name="btn_allow">Allow</string>
    <string name="btn_deny">Deny</string>
    <string name="circle_btn_crop">Crop</string>
    <string name="circle_btn_done">Done</string>
    <string name="circle_btn_edit">Edit</string>
    <string name="circle_btn_extend">Extend</string>
    <string name="circle_btn_long_screenshot">Long screenshot</string>
    <string name="circle_btn_share">Share</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="default_web_client_id" />
    <string name="description_img_crop_view">You can crop the screenshot.</string>
    <string name="dlg_desc_accessibility_service_html">&lt;strong>Screenshot&lt;/strong> needs &lt;strong>Accessibility permission&lt;/strong> to capture the screen.</string>
    <string name="editor_left_dialog_message">Do you want to save before exiting?</string>
    <string name="editor_left_dialog_negative_btn">No</string>
    <string name="editor_left_dialog_positive_btn">Yes</string>
    <string name="editor_left_dialog_title">Save and exit</string>
    <string name="editor_text_text">Text</string>
    <string name="editor_toast_file_not_found">Files do not exist</string>
    <string name="editor_toast_processing">Processing full resolution image...</string>
    <string name="editor_toast_save_failed">Save failed</string>
    <string name="firebase_database_url" />
    <string name="foreground_notification_name">Foreground running state</string>
    <string name="gcm_defaultSenderId" />
    <string name="google_api_key" />
    <string name="google_app_id" />
    <string name="google_crash_reporting_api_key" />
    <string name="google_storage_bucket" />
    <string name="notification_delete">Delete</string>
    <string name="notification_share">Share</string>
    <string name="notification_text">Tap to view your screenshot</string>
    <string name="notification_title">Screenshot captured</string>
    <string name="perm_dlg_desc_draw_overlay_html">To use &lt;strong>Screenshot&lt;/strong>, tap &lt;strong>SETTINGS&lt;/strong> then turn on &lt;strong>Display over other apps&lt;/strong>.</string>
    <string name="perm_dlg_desc_storage_html">&lt;strong>Screenshot&lt;/strong> needs &lt;strong>%1$s&lt;/strong> to save the image. Please provide the permission first before using this feature.</string>
    <string name="perm_dlg_desc_storage_setting_html">Permission to access &lt;strong>%1$s&lt;/strong> has been denied. To provide the permission, tap &lt;strong>SETTINGS&lt;/strong>, turn on &lt;strong>%1$s&lt;/strong> in &lt;strong>Permissions&lt;/strong>, then restart your device.</string>
    <string name="perm_dlg_request">Permission request</string>
    <string name="perm_dlg_setting">Settings</string>
    <string name="perm_storage">Storage</string>
    <string name="project_id" />
    <string name="screenshot_bubble_tips">Click here to take long screenshots.</string>
    <string name="screenshot_notification_name">Screenshot status</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="toast_no_more_content">No more content to capture</string>
    <string name="toast_screenshot_forbidden">Unable to capture screenshot</string>
    <string name="toast_screenshot_saved">Screenshot captured</string>
    <string name="toast_up_to_limit_screenshot">Long screenshot already reached its maximum length</string>
</resources>
