<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/root" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/animation_image" android:background="@drawable/ic_asus_animation_view_bg" android:padding="@dimen/anim_padding_gap" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="fitXY" android:contentDescription="@null" />
    <RelativeLayout android:id="@id/main_relativeLayout" android:background="@drawable/ic_asus_screenshot_preview_bg" android:padding="@dimen/prvw_padding_gap" android:visibility="gone" android:layout_width="@dimen/prvw_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/prvw_margin_top" android:layout_marginBottom="@dimen/prvw_margin_bottom" android:layout_alignParentBottom="true" android:layout_marginStart="@dimen/prvw_margin_right" android:layout_alignParentStart="true" android:elevation="@dimen/prvw_elevation">
        <ScrollView android:id="@id/scrollview_image" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true">
            <com.asus.stitchimage.ui.overlay.AutoFitImageView android:id="@id/img_preview" android:layout_width="fill_parent" android:layout_height="wrap_content" android:foreground="@drawable/ripple_preview_background" />
        </ScrollView>
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/ctrl_bar_main" android:background="@drawable/ic_asus_screenshot_bg_3" android:visibility="gone" android:layout_width="@dimen/ctrl_bar_width" android:layout_height="@dimen/ctrl_bar_height" android:layout_marginBottom="@dimen/ctrl_bar_margin_bottom" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:paddingStart="@dimen/ctrl_btn_padding_start" android:paddingEnd="@dimen/ctrl_btn_padding_end">
        <TextView android:textSize="@dimen/ctrl_btn_text_size" android:textColor="@color/ctrl_btn_text_color" android:id="@id/txt_ctrl_btn_extend" android:background="@drawable/ripple_btn_background" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="@dimen/ctrl_btn_margin_top" android:text="@string/circle_btn_long_screenshot" android:drawableTop="@drawable/circle_btn_extend" android:drawablePadding="@dimen/ctrl_btn_drawable_padding" android:layout_weight="1.0" android:fontFamily="@string/asusres_font_family_main" android:textAlignment="center" />
        <TextView android:textSize="@dimen/ctrl_btn_text_size" android:textColor="@color/ctrl_btn_text_color" android:id="@id/txt_ctrl_btn_edit" android:background="@drawable/ripple_btn_background" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="@dimen/ctrl_btn_margin_top" android:text="@string/circle_btn_edit" android:drawableTop="@drawable/circle_btn_edit" android:drawablePadding="@dimen/ctrl_btn_drawable_padding" android:layout_weight="1.0" android:fontFamily="@string/asusres_font_family_main" android:textAlignment="center" />
        <TextView android:textSize="@dimen/ctrl_btn_text_size" android:textColor="@color/ctrl_btn_text_color" android:id="@id/txt_ctrl_btn_share" android:background="@drawable/ripple_btn_background" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="@dimen/ctrl_btn_margin_top" android:text="@string/circle_btn_share" android:drawableTop="@drawable/circle_btn_share" android:drawablePadding="@dimen/ctrl_btn_drawable_padding" android:layout_weight="1.0" android:fontFamily="@string/asusres_font_family_main" android:textAlignment="center" />
        <TextView android:textSize="@dimen/ctrl_btn_text_size" android:textColor="@color/ctrl_btn_text_color" android:id="@id/txt_ctrl_btn_delete" android:background="@drawable/ripple_btn_background" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="@dimen/ctrl_btn_margin_top" android:text="@string/notification_delete" android:drawableTop="@drawable/circle_btn_delete" android:drawablePadding="@dimen/ctrl_btn_drawable_padding" android:layout_weight="1.0" android:fontFamily="@string/asusres_font_family_main" android:textAlignment="center" />
    </LinearLayout>
</RelativeLayout>